--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-query-devtools": "^4.36.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.0",
     "react-router-dom": "^6.16.0",
+    "yup": "^1.4.0",
     "zustand": "^4.4.3"
   },
   "devDependencies": {
