--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,8 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
   },
-  "include": ["vite.config.ts", ".eslintrc.cjs", "tailwind.config.js", "postcss.config.js", "src"],
+  "include": ["vite.config.ts", ".eslintrc.cjs", "tailwind.config.ts", "postcss.config.js", "src"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
