--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 VITE_ENV=dev
 VITE_HOST=http://localhost:5173
+VITE_SERVER_API=http://localhost:5000/api
 VITE_GOOGLE_APP_ID=821362177792-nfcc1e19e7bbfnq1li8gkeir6j3pt7rs.apps.googleusercontent.com
 VITE_LINKEDIN_APP_SECRET=''
 VITE_LINKEDIN_APP_ID=''
