--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-query-devtools": "^4.36.1",
     "antd": "^5.15.2",
+    "axios": "^1.6.7",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.16.0",
     "reactjs-social-login": "^2.6.3",
     "yup": "^1.4.0",
