--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-query-devtools": "^4.36.1",
     "antd": "^5.15.2",
     "axios": "^1.6.7",
+    "discord-oauth2": "^2.12.1",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
