Created homepage with form for editing user profile data; updated tailwind for html for a lot of presentational components; updated store;

--- a/.env
+++ b/.env
@@ -2,11 +2,10 @@ VITE_ENV=dev
 VITE_HOST=http://localhost:5173
 VITE_SERVER_API=http://localhost:5000/api
 VITE_GOOGLE_APP_ID=821362177792-nfcc1e19e7bbfnq1li8gkeir6j3pt7rs.apps.googleusercontent.com
-VITE_LINKEDIN_APP_SECRET=''
-VITE_LINKEDIN_APP_ID=''
 VITE_GITHUB_APP_ID=c8063271430a7d8ef343
 VITE_GITHUB_APP_SECRET=809293159d1f583894be2a904b510796a9b2650e
-VITE_DISCORD_APP_ID=''
+VITE_DISCORD_APP_ID=1218961339662471309
+VITE_DISCORD_APP_SECRET=C3_HrwviTb7doMGxWPF4IglpuwCNlW3f
 VITE_MICROSOFT_APP_ID=32094b48-046a-49a5-beab-b550f8db2830
 VITE_MICROSOFT_APP_TENANT_ID=f8cdef31-a31e-4b4a-93e4-5f571e91255a
 VITE_TWITTER_API_KEY=zaj3azjzIbfUN9HaVJtda822w
