--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^6.16.0",
     "reactjs-social-login": "^2.6.3",
     "yup": "^1.4.0",
+    "yup-phone": "^1.3.2",
     "zustand": "^4.4.3"
   },
   "devDependencies": {
