--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": false
   },
   "include": ["vite.config.ts", ".eslintrc.cjs", "tailwind.config.ts", "postcss.config.js", "src"],
   "references": [{ "path": "./tsconfig.node.json" }]
