Added HMAC validation for all non-auth api endpoints

--- a/.env
+++ b/.env
@@ -11,3 +11,4 @@ VITE_MICROSOFT_APP_TENANT_ID=f8cdef31-a31e-4b4a-93e4-5f571e91255a
 VITE_TWITTER_API_KEY=zaj3azjzIbfUN9HaVJtda822w
 VITE_TWITTER_API_SECRET=o38J4mKWw09DIrC1bPbrXxBVv2p0so9ftthBMG4IvK8FvT8d9G
 VITE_TWITTER_CLIENT_ID=ZFdRU1pNaktOeDIteWIzSTB5Qlo6MTpjaQ
+VITE_SECRET_API_KEY=11e6aef0-0f41-41fa-bfb1-8379e99dd971
