--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@tanstack/react-query-devtools": "^4.36.1",
     "antd": "^5.15.2",
     "axios": "^1.6.7",
+    "crypto-js": "^4.2.0",
     "discord-oauth2": "^2.12.1",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
+    "query-string": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.13",
