--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-query-devtools": "^4.36.1",
+    "@testing-library/user-event": "^14.5.2",
     "antd": "^5.15.2",
     "axios": "^1.6.7",
     "crypto-js": "^4.2.0",
